<resources>    <string name="app_name">CareBuddy </string>    <string name="search">Search</string>    <string name="cart">Cart</string>    <string name="become_a_donor">Become a Donor</string>    <string name="gift_a_lifepack_to_people_who_need">GIFT TO PEOPLE IN NEED</string>    <string name="a_project_by_beff_jezos"> </string>    <string name="donation_amount">Donation Amount ($)</string>    <string name="give_a_little_help_a_lot">GIVE A LITTLE, HELP A LOT</string>    <!-- TODO: Remove or change this placeholder text --></resources>