<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".ui.activities.Splash">    <ImageView        android:id="@+id/imageView"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:scaleX="1.3"        android:scaleY="1.2"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:srcCompat="@drawable/background_splash" />    <ImageView        android:id="@+id/imageView2"        android:layout_width="250dp"        android:layout_height="250dp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.495"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:srcCompat="@drawable/ic_logo" />    <TextView        android:id="@+id/textView2"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:fontFamily="@font/bold"        android:gravity="center"        android:text="@string/app_name"        android:textColor="@color/colorPrimary"        android:textSize="36sp"        android:textStyle="bold"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/imageView2" />    <TextView        android:id="@+id/textView3"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:fontFamily="sans-serif-condensed-medium"        android:gravity="center"        android:text="@string/gift_a_lifepack_to_people_who_need"        android:textColor="@color/colorPrimaryDark"        android:textSize="16sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/textView2" />    <TextView        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="2dp"        android:fontFamily="serif-monospace"        android:gravity="center"        android:text="@string/a_project_by_beff_jezos"        android:textColor="@color/colorPrimary"        android:textSize="24sp"        app:layout_constraintBottom_toTopOf="@+id/imageView"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.49"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/textView3"        app:layout_constraintVertical_bias="0.23000002" /></androidx.constraintlayout.widget.ConstraintLayout>