<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".ui.activities.MainActivity">    <androidx.appcompat.widget.Toolbar        android:id="@+id/toolbar"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@color/colorAccent"        android:minHeight="?attr/actionBarSize"        android:theme="?attr/actionBarTheme"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent">        <TextView            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:fontFamily="@font/bold"            android:gravity="center"            android:text="@string/app_name"            android:textColor="@color/textColorPrimary"            android:textSize="22sp"            android:textStyle="bold" />    </androidx.appcompat.widget.Toolbar>    <androidx.cardview.widget.CardView        android:id="@+id/cardView"        android:layout_width="match_parent"        android:layout_height="80dp"        android:layout_marginLeft="10dp"        android:layout_marginTop="32dp"        android:layout_marginRight="10dp"        android:clickable="true"        android:focusable="true"        android:foreground="?attr/selectableItemBackground"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/toolbar">        <androidx.constraintlayout.widget.ConstraintLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:background="@drawable/boarder">            <ImageView                android:id="@+id/imageView3"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginStart="32dp"                android:layout_marginBottom="7dp"                android:src="@drawable/ic_flat"                app:layout_constraintBottom_toBottomOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toTopOf="parent" />            <TextView                android:id="@+id/textView"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:fontFamily="@font/bold"                android:gravity="center"                android:text="Registered\nCharities "                android:textColor="@color/colorPrimary"                android:textSize="26sp"                android:textStyle="bold"                app:layout_constraintBottom_toBottomOf="parent"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toEndOf="@+id/imageView3"                app:layout_constraintTop_toTopOf="parent" />        </androidx.constraintlayout.widget.ConstraintLayout>    </androidx.cardview.widget.CardView>    <androidx.cardview.widget.CardView        android:id="@+id/cardView3"        android:layout_width="match_parent"        android:layout_height="80dp"        android:layout_marginLeft="10dp"        android:layout_marginTop="32dp"        android:layout_marginRight="10dp"        android:clickable="true"        android:focusable="true"        android:foreground="?attr/selectableItemBackground"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/fudhgdrg">        <androidx.constraintlayout.widget.ConstraintLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:background="@drawable/boarder"            android:paddingTop="5dp"            android:paddingBottom="5dp">            <ImageView                android:id="@+id/imageView44"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginStart="32dp"                android:src="@drawable/ic_love"                app:layout_constraintBottom_toBottomOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toTopOf="parent" />            <TextView                android:id="@+id/textViewed"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:fontFamily="@font/bold"                android:gravity="center"                android:text="Donate "                android:textColor="@color/colorPrimary"                android:textSize="26sp"                android:textStyle="bold"                app:layout_constraintBottom_toBottomOf="parent"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintHorizontal_bias="0.5"                app:layout_constraintStart_toEndOf="@+id/imageView44"                app:layout_constraintTop_toTopOf="parent" />        </androidx.constraintlayout.widget.ConstraintLayout>    </androidx.cardview.widget.CardView>    <androidx.cardview.widget.CardView        android:id="@+id/fudhgdrg"        android:layout_width="match_parent"        android:layout_height="80dp"        android:layout_marginLeft="10dp"        android:layout_marginTop="32dp"        android:layout_marginRight="10dp"        android:clickable="true"        android:focusable="true"        android:foreground="?attr/selectableItemBackground"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/cardView">        <androidx.constraintlayout.widget.ConstraintLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:background="@drawable/boarder">            <ImageView                android:id="@+id/imageView4"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginStart="28dp"                android:padding="8dp"                android:scaleX="0.9"                android:scaleY="0.9"                android:src="@drawable/ic_gift_box"                app:layout_constraintBottom_toBottomOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toTopOf="parent" />            <TextView                android:id="@+id/textView1"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:fontFamily="@font/bold"                android:gravity="center"                android:paddingBottom="3dp"                android:text="Form a Care\nPackage"                android:textColor="@color/colorPrimary"                android:textSize="26sp"                android:textStyle="bold"                app:layout_constraintBottom_toBottomOf="parent"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toEndOf="@+id/imageView4"                app:layout_constraintTop_toTopOf="parent" />        </androidx.constraintlayout.widget.ConstraintLayout>    </androidx.cardview.widget.CardView>    <Button        android:id="@+id/newDonor"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginStart="8dp"        android:layout_marginEnd="8dp"        android:backgroundTint="@color/colorPrimary"        android:fontFamily="@font/bold"        android:text="@string/become_a_donor"        android:textColor="@color/textColorPrimary"        app:layout_constraintBottom_toTopOf="@+id/newCharity"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        tools:ignore="MissingConstraints" />    <Button        android:id="@+id/newCharity"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginStart="8dp"        android:layout_marginEnd="8dp"        android:layout_marginBottom="4dp"        android:backgroundTint="@color/colorPrimary"        android:fontFamily="@font/bold"        android:text="Loading..."        android:textColor="@color/textColorPrimary"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        tools:ignore="MissingConstraints" />    <TextView        android:id="@+id/textView16"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:fontFamily="@font/bold"        android:gravity="center"        android:text="@string/give_a_little_help_a_lot"        android:textAllCaps="true"        android:textColor="@color/colorPrimaryDark"        android:textSize="20sp"        app:layout_constraintBottom_toTopOf="@+id/newDonor"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.5"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/cardView3" /></androidx.constraintlayout.widget.ConstraintLayout>